<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.a3csci3130.CreateContactAcitivity">

    <EditText
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:hint = "Name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:hint="e-mail"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />
    <EditText

        android:id="@+id/Bnumber"

        android:layout_width="395dp"

        android:layout_height="wrap_content"

        android:hint="Business number"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />
    <EditText

        android:id="@+id/address"

        android:layout_width="395dp"

        android:layout_height="wrap_content"

        android:hint="Address"

        android:layout_marginTop="8dp"

        app:layout_constraintTop_toBottomOf="@+id/Bnumber"

        android:layout_marginLeft="8dp"

        app:layout_constraintLeft_toLeftOf="parent"

        android:layout_marginStart="8dp" />
    <Spinner
        android:id="@+id/Brole"

        android:layout_width="395dp"

        android:layout_height="50dp"

        android:layout_marginTop="8dp"

        app:layout_constraintTop_toBottomOf="@+id/address"

        android:layout_marginLeft="8dp"

        app:layout_constraintLeft_toLeftOf="parent"

        android:layout_marginStart="8dp" />

    <Spinner
        android:id="@+id/province"

        android:layout_width="395dp"

        android:layout_height="50dp"

        android:layout_marginTop="8dp"

        app:layout_constraintTop_toBottomOf="@+id/Brole"

        android:layout_marginLeft="8dp"

        app:layout_constraintLeft_toLeftOf="parent"

        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="72dp"
        android:onClick="submitInfoButton"
        android:text="Create Contact"
        app:layout_constraintHorizontal_bias="0.502"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/province" />

</android.support.constraint.ConstraintLayout>
