...
        android:layout_marginStart="8dp" />



    <EditText

        android:id="@+id/email"

        android:layout_width="395dp"

        android:layout_height="wrap_content"

        android:hint="e-mail"
...
        app:layout_constraintLeft_toLeftOf="parent"

        android:layout_marginStart="8dp" />

    <Button

        android:id="@+id/updateButton"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginLeft="44dp"
...
